--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         </div>
     </div>
     <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
+    <script src="main.js"></script>
 
 </body>
 </html>
