--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
                 </select>
                 <div class="primary">
                     <input type="number" id="main-unit">
-                    <select class="main-unit-options">
+                    <select class="main-unit-options reset">
                         <option>Celsius</option>
                         <option>Kelvin</option>
-                        <option>Farenheight</option> 
+                        <option>Fahrenheit</option> 
                     </select>
                 </div>
             </div>    
             <div class="bottom">
                 <div class="secondary">
                     <input type="number" id="second-unit">
-                    <select class="second-unit-options">
+                    <select class="second-unit-options reset">
                         <option>Kelvin</option>
-                        <option>Farenheight</option>
+                        <option>Fahrenheit</option>
                         <option>Celsius</option>
                     </select>
                 </div>
