--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,8 +18,6 @@
                 <ion-icon name="sunny-outline"></ion-icon>
                 <select id="unit-converter">
                     <option>Temperature</option>
-                    <option>Currency</option>
-                    <option>Length</option>
                 </select>
                 <div class="primary">
                     <input type="number" id="main-unit">
